--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -21,9 +21,9 @@ PostgreSQL
 
 <u>表里面任意两行不能相同</u>
 
-# 2
+# 2 关系模型
 
-## 2.1
+## 2.1 关系
 
 实体：名称、属性
 
@@ -92,7 +92,7 @@ RELATION_NAME(Colunm01,Colunm01,...,LastColunm) #关系名(属性,...)
 * 参照完整性→外键必须与现有主键值对应
 * 用户自定义完整性
 
-# 3 SQL
+# 3 简单的SQL语句
 
 ## 3.1
 
@@ -145,7 +145,7 @@ CLOSE CURSOR– 关闭游标
 货币：MONEY
 ```
 
-## 3.2 库
+## 3.2 库-增删改查
 
 ```sql
 create database <数据库名>; --创建数据库
@@ -155,7 +155,7 @@ drop database <数据库名>; --删除数据库
 \c <数据库名> --选择数据库
 ```
 
-## 3.3 表
+## 3.3 表-增删改查
 
 完整性约束
 
@@ -168,6 +168,8 @@ CHECK——有效性检查
 DEFAULT——缺省值
 ```
 
+删除创建查询
+
 ```sql
 DROP TABLE <表名>; --删除表
 \l --列举表
@@ -177,10 +179,11 @@ CREATE TABLE <表名> (
 	<列名2> <数据类型> [列完整性约束],
     <列名3> <数据类型> [列完整性约束]，
 	...
+    constraint tablename_PK primary key(某个列名)
 );--创建表格式
 ```
 
-示例：
+示例：（主键、非空、枚举、缺省值/默认值）
 
 ```sql
 CREATE TABLE Course(
@@ -195,15 +198,15 @@ CREATE TABLE Course(
 另一种指明主键外键：
 
 ```sql
---CONSTRAINT  <约束名>  PRIMARY Key(主键列)
+--constraint <约束名> primary key(主键列)
 CONSTRAINT CoursePlan_PK PRIMARY Key(CourseID,TeacherID)
 CONSTRAINT Department_PK PRIMARY KEY(DepartmentCode) --可以一个也可以复合--
---CONSTRAINT  <约束名>  FOREIGN Key(外键列)
+--constraint <约束名>  foreign Key(外键列)
 CONSTRAINT CoursePlanID_FK FOREIGN Key(CoursePlanID) REFERENCES Plan(CoursePlanID) --本表的CoursePlanID作为外键与Plan表的CoursePlanID对应
 ON DELETE CASCADE --仅外键用,删除本表中数据时关联的表中数据也删除
 ```
 
-修改表
+修改表：新增、修改、删除某列
 
 ```sql
 --ADD修改方式，用于增加新列或列完整性约束--
@@ -232,32 +235,38 @@ ALTER INDEX <索引名> RENAME TO <新索引名>; --改名
 DROP INDEX <索引名>; --删除
 ```
 
-## 3.4 数据
+## 3.4 数据-增删改
 
 插入数据
 
 ```sql
+--INSERT INTO TABLE_NAME (column1, column2, column3,...columnN) VALUES (value1, value2, value3,...valueN);
 INSERT INTO <表名> VALUES (列值表);
 INSERT INTO Student VALUES('2017220101105','柳因','女','1999-04-23','软件工程', 'liuyin@163.com');
+--多行插入用逗号隔开
+INSERT INTO COMPANY (ID,NAME,AGE,ADDRESS,SALARY,JOIN_DATE) VALUES 
+	(4, 'Mark', 25, 'Rich-Mond ', 65000.00, '2007-12-13' ), 
+	(5, 'David', 27, 'Texas', 85000.00, '2007-12-13');
 ```
 
-更新数据
+修改数据
 
 ```sql
 UPDATE <表名> SET <列名1>=<表达式1>,<列名2>=<表达式2>... WHERE <条件表达式>;
-UPDATE Student SET Email=‘zhaodong@163.com'
-WHERE   StudentName=‘赵东'
+UPDATE Student SET Email='zhaodong@163.com' WHERE StudentName='赵东'
+UPDATE COMPANY SET ADDRESS = 'Texas', SALARY=20000; --没有where就全部更改了
 ```
 
 删除
 
 ```sql
 DELETE FROM STUDENT WHERE StudentName='张亮';
+DELETE FROM COMPANY; --删除整张表
 ```
 
 ## 3.5 表单查询
 
-格式
+规范
 
 ```sql
 SELECT [ALL|DISTINCT] <目标列>[,<目标列>...]
@@ -268,7 +277,63 @@ FROM <表名|视图名>[,<表名|视图名>...]
 [ORDER BY <列名> [ASC | DESC]];
 ```
 
-# 4
+查询
+
+```sql
+SELECT column1, column2,...columnN FROM table_name;
+select * from tablename;
+```
+
+有约束的情况
+
+```sql
+SELECT * FROM COMPANY WHERE AGE >= 25 AND SALARY >= 6500;
+SELECT * FROM COMPANY WHERE SALARY IS NOT NULL;
+SELECT * FROM COMPANY WHERE SALARY = 10000;
+SELECT * FROM COMPANY WHERE AGE IN ( 25, 27 ); --AGE为25到27的数据
+```
+
+表达式
+
+```sql
+SELECT numerical_expression as  OPERATION_NAME [FROM table_name WHERE CONDITION] ;
+SELECT (17 + 6) AS ADDITION ;
+SELECT COUNT(*) AS "RECORDS" FROM COMPANY; --count():返回查询的记录总数
+SELECT CURRENT_TIMESTAMP; --日期表达式
+```
+
+套娃式子查询
+
+```sql
+SELECT * FROM COMPANY WHERE AGE > (SELECT AGE FROM COMPANY WHERE SALARY > 65000);
+```
+
+<mark>上面这个语句，多条AGE结果的话，AGE到底大于哪个数</mark>：GPT告诉我以第一条为准，所以建议用order by对子查询结果排序
+
+## 其他 LIKE、LIMIT
+
+<mark>没别的要紧，所以先看别的</mark>
+
+order by：对一列或者多列数据进行升序（ASC）或者降序（DESC）排列
+
+```sql
+--SELECT column-list FROM table_name [WHERE condition] [ORDER BY column1, column2, .. columnN] [ASC | DESC];
+SELECT * FROM COMPANY ORDER BY AGE ASC; --AGE升序，即由小到大
+SELECT * FROM COMPANY ORDER BY NAME, SALARY ASC; --多字段时，会优先按照第一个指定的列进行排序，如果该列存在相同值，则按照第二个指定的列进行排序，以此类推
+```
+
+group by：在where之后，order之前。from前面的非聚合的必须在后面出现，聚合的比如SUM（XXX）就不用
+
+```sql
+--SELECT column-list FROM table_name WHERE [ conditions ] GROUP BY column1, column2....columnN ORDER BY column1, column2....columnN
+SELECT NAME, SUM(SALARY) FROM COMPANY GROUP BY NAME; --按NAMW分组，对NAME一样的对salary求和。不能直接写salary因为要聚合，得有函数聚合起来
+```
+
+with：
+
+
+
+# 4 E-R模型
 
 E-R模型：实体-联系模型
 
@@ -282,3 +347,36 @@ E-R模型：实体-联系模型
 强实体：被依赖的实体
 
 范式
+
+
+
+# 5 
+
+
+
+# 示例
+
+## 库
+
+创建数据库
+
+进入数据库
+
+## 表/列
+
+创建表
+
+增删改查表
+
+## 视图
+
+
+
+## 触发器
+
+
+
+## 用户权限
+
+
+
