--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -235,6 +235,12 @@ ALTER INDEX <索引名> RENAME TO <新索引名>; --改名
 DROP INDEX <索引名>; --删除
 ```
 
+示例
+
+```sql
+CREATE INDEX AU_Name_Idx ON Author(AU_name);
+```
+
 ## 3.4 数据-增删改
 
 插入数据
@@ -430,6 +436,117 @@ CREATE VIEW COMPANY_VIEW AS SELECT ID, NAME, AGE FROM  COMPANY;
 DROP VIEW view_name
 ```
 
+## function
+
+创建一个存储过程
+
+```sql
+CREATE [ OR REPLACE ] FUNCTION  存储过程名
+    ( [ [ argmode ] [ 形参名 ] argtype [ { DEFAULT | = } default_expr ] [, ...] ] )
+    [ RETURNS retype | RETURNS TABLE ( column_name column_type [, ...] ) ]
+AS $$         //$$用于声明存储过程的实际代码的开始
+DECLARE
+        -- 声明段
+BEGIN
+        --函数体语句
+END;
+$$ LANGUAGE lang_name;  //$$ 表明代码的结束, LANGUAGE后面指明所用的编程语言
+```
+
+* OR REPLACE ：覆盖同名的存储过程
+* argmode：存储过程参数的模式可以为IN、OUT或INOUT，缺省值是IN
+* RETURNS：返回值
+* RETURNS TABLE：返回二维表
+
+示例
+
+```sql
+CREATE OR REPLACE FUNCTION countRecords ()  
+RETURNS integer AS $count$  
+declare  
+    count integer;  
+BEGIN  
+   SELECT count(*) into count FROM STUDENT;  
+   RETURN count;  
+END;  
+$count$ LANGUAGE plpgsql;
+```
+
+执行存储过程
+
+```sql
+select  into 自定义变量  from 存储过程名（参数）；
+```
+
+```sql
+CREATE OR REPLACE FUNCTION testExec()  
+returns integer AS $$ 
+declare
+   rec integer;  
+BEGIN  
+   select  into rec from countRecords();  
+     //如果不关心countRecords()的返回值，则可用 PERFORM countRecords() 代替; 
+   return  rec;  
+END;  
+$$ LANGUAGE plpgsql;
+```
+
+删除
+
+```sql
+DROP FUNCTION [ IF EXISTS ] name ( [ [ argmode ] [ argname ] argtype [, ...] ] ) [ CASCADE | RESTRICT ]
+```
+
+* IF EXISTS：如果指定的存储过程不存在，那么发出提示信息。
+* name ：现存的存储过程名称。
+* argmode：参数的模式：IN(缺省), OUT, INOUT, 。请注意，实际并不注意OUT参数，因为判断存储过程的身份只需要输入参数。
+* argname：参数的名字。请注意，实际上并不注意参数的名字，因为判断函数的身份只需要输入参数的数据类型。
+* argtype：如果有的话，是存储过程参数的类型。
+* CASCADE：级联删除依赖于存储过程的对象(如触发器)。
+* RESTRICT：如果有任何依赖对象存在，则拒绝删除该函数；这个是缺省值。
+
+示例
+
+```sql
+DROP FUNCTION IF EXISTS  testExec()   
+```
+
+### PL/SQL基本语法
+
+声明局部变量
+
+```sql
+declare
+	变量名 变量类型；
+```
+
+条件语句
+
+```sql
+--IF-THEN-- 
+IF boolean-expression THEN
+	statements
+END IF; 
+--IF-THEN-ELSE--
+IF boolean-expression THEN
+	statements
+ELSE
+--IF-THEN-ELSIF-ELSE--
+IF boolean-expression THEN
+	statements
+ELSIF boolean-expression THEN
+	statements
+ELSIF boolean-expression THEN
+    statements
+ELSE
+	statements
+END IF; 
+```
+
+==循环==
+
+==遍历==
+
 ## 触发器
 
 trigger：数据库的回调函数，它会在指定的数据库事件发生时自动执行/调用
@@ -469,8 +586,28 @@ CREATE TRIGGER 触发器名
 * 指明所定义的触发器名
 * BEFORE | AFTER | INSTEAD OF 指明触发器被触发的时间
 * ON 表名 指明触发器所依附的表
-*  FOR EACH { ROW | STATEMENT } 指明触发器被触发的次数
+* FOR EACH { ROW | STATEMENT } 指明触发器被触发的次数
 * EXECUTE PROCEDURE 存储过程名 ( 参数列表 ) 指明触发时所执行的存储过程
+
+示例
+
+```sql
+CREATE TRIGGER score_audit_triger
+    AFTER INSERT OR UPDATE OR DELETE 
+    ON stu_score
+    FOR EACH ROW 
+    EXECUTE PROCEDURE score_audit();
+```
+
+==触发器的修改、删除==
+
+## 用户/权限
+
+创建用户
+
+
+
+权限
 
 
 
@@ -604,9 +741,38 @@ FROM Registration r
 JOIN Estate e ON r.EstateID = e.EstateID
 WHERE r.PersonID = '110101199001011234'
 ORDER BY r.PurchasedDate DESC;
+
+CREATE VIEW Book_AUTHER_PUBLISHER AS
+SELECT B.Book_Name AS "图书", 
+AU.AU_Name AS "作者",
+PU.PUB_Name AS "出版社",
+B.Book_Price AS "图书价格"
+FROM Book AS B
+JOIN Author AS AU ON B.AU_ID=AU.AU_ID
+JOIN Publisher AS PU ON B.PUB_ID=PU.PUB_ID
+
+select * from Book_AUTHER_PUBLISHER
 ```
 
 ## 触发器
+
+```sql
+CREATE OR REPLACE FUNCTION InsertSale()
+	RETURNS TRIGGER AS $$
+	BEGIN 
+		IF (TG_OP='INSERT') THEN
+			INSERT INTO BookStock VALUES(NEW.SALE_ID,NEW.Book_ISBN,NEW.SALE_QTY,'出库',NEW.SALE_Date);
+			UPDATE Book SET Book_Stock=Book_Stock-NEW.SALE_QTY WHERE Book.Book_ISBN =NEW.Book_ISBN;
+			RETURN NEW;
+		END IF;
+		RETURN NULL;
+	END;
+$$ LANGUAGE plpgsql;
+```
+
+
+
+
 
 
 
