--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -1,3 +1,7 @@
+> 部分跟着课内记得笔记，部分看的 [菜鸟教程](https://www.runoob.com/postgresql/postgresql-privileges.html)  
+>
+> 目的是期末，不是技术
+
 # 1 概论
 
 数据库应用系统类型：业务处理系统、管理信息系统、决策支持系统
@@ -318,8 +322,6 @@ SELECT * FROM COMPANY WHERE AGE > (SELECT AGE FROM COMPANY WHERE SALARY > 65000)
 
 ## 其他
 
-<mark>没别的要紧，所以先看别的</mark>
-
 <mark>like</mark>
 
 <mark>LIMIT</mark>
@@ -543,9 +545,9 @@ ELSE
 END IF; 
 ```
 
-==循环==
+<mark>循环</mark>
 
-==遍历==
+<mark>遍历</mark>
 
 ## 触发器
 
@@ -603,15 +605,83 @@ CREATE TRIGGER score_audit_triger
 
 ## 用户/权限
 
+### 创建、赋予
+
+角色就相当于用户的一个组
+
+创建角色
+
+```sql
+CREATE ROLE "R_Customer" WITH
+LOGIN
+NOSUPERUSER
+NOCREATEDB
+NOCREATEROLE
+NOINHERIT
+NOREPLICATION
+CONNECTION LIMIT -1 --“-1”表示没有限制
+PASSWORD '123';
+```
+
+权限分为
+
+```sql
+SELECT
+INSERT
+UPDATE
+DELETE
+TRUNCATE
+REFERENCES
+TRIGGER
+CREATE
+CONNECT
+TEMPORARY
+EXECUTE
+USAGE
+```
+
+赋予权限
+
+```sql
+GRANT privilege [, ...]
+ON object [, ...]
+TO { PUBLIC | GROUP group | username }
+--示例--
+GRANT SELECT ON Book TO "R_Customer";
+GRANT SELECT,INSERT,UPDATE,DELETE ON book To"R_Seller";
+```
+
 创建用户
 
+```sql
+CREATE USER runoob WITH PASSWORD 'password';
 
+CREATE USER "U_Customer" WITH
+LOGIN
+CONNECTION LIMIT -1
+IN ROLE "R_Customer" 
+PASSWORD '123';
+```
 
-权限
+### 修改、删除
 
+取消权限
 
+```sql
+REVOKE privilege [, ...]
+ON object [, ...]
+FROM { PUBLIC | GROUP groupname | username }
+--例子--
+REVOKE ALL ON COMPANY FROM runoob;
+```
 
-## 其他小点
+删除user
+
+```sql
+DROP USER runoob;
+```
+
+## 其他
 
 union
 
@@ -640,9 +710,9 @@ FROM table_name
 WHERE [condition];
 ```
 
-
-
 # sql示例
+
+> 为了防止上面给的例子不够，专门列了个标题写例子
 
 ## 库
 
@@ -770,10 +840,6 @@ CREATE OR REPLACE FUNCTION InsertSale()
 $$ LANGUAGE plpgsql;
 ```
 
-
-
-
-
-
-
 ## 用户权限
+
+见之前的，写用户权限时就按顺序写了例子
