--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -601,7 +601,7 @@ CREATE TRIGGER score_audit_triger
     EXECUTE PROCEDURE score_audit();
 ```
 
-==触发器的修改、删除==
+<mark>触发器的修改、删除</mark>
 
 ## 用户/权限
 
@@ -824,7 +824,9 @@ JOIN Publisher AS PU ON B.PUB_ID=PU.PUB_ID
 select * from Book_AUTHER_PUBLISHER
 ```
 
-## 触发器
+## 存储过程与触发器
+
+存储过程
 
 ```sql
 CREATE OR REPLACE FUNCTION InsertSale()
@@ -838,6 +840,37 @@ CREATE OR REPLACE FUNCTION InsertSale()
 		RETURN NULL;
 	END;
 $$ LANGUAGE plpgsql;
+
+CREATE OR REPLACE FUNCTION counts ()  
+RETURNS integer AS $count$  
+declare  
+    count integer;  
+BEGIN  
+   SELECT count(*) into count FROM student;  
+   RETURN count;  
+END;  
+$count$ LANGUAGE plpgsql;
+
+select counts(); --返回3
+```
+
+触发器
+
+```sql
+CREATE OR REPLACE FUNCTION insert_stu_grade ()  
+RETURNS trigger AS $$ 
+declare
+	rec integer;
+BEGIN  
+   insert into grade values('000',new.studentid,0);
+   return rec;
+END;  
+$$ LANGUAGE plpgsql;
+
+CREATE TRIGGER stu_grade
+AFTER INSERT ON student
+FOR EACH ROW
+EXECUTE FUNCTION insert_stu_grade();
 ```
 
 ## 用户权限
