--- a/课内/密码学.md
+++ b/课内/密码学.md
@@ -118,5 +118,78 @@ SM2算法
 
 
 
+# 第五章 MAC和Hash函数
+
+重点
+
+* 消息认证码的定义及构造
+* 杂凑函数的定义及性质
+* 杂凑函数设计的一般模式
+* SHA1的分组长度、填充、摘要长度、迭代轮数
+* SM3的分组长度、填充、摘要长度、迭代轮数
+
+消息认证码/密码校验和：消息被一密钥控制的公开函数作用后产生的用作认证符的固定长度的数值
+
+SHA-1
+
+* 输入：小于 $2^{64}$  比特的消息，512比特一分组
+* 输出：160比特（即摘要）
+* 压缩函数：4轮，每轮20步迭代
+
+SM3
+
+* 输入：$2^{64}$ 比特，512比特一分组
+* 输出：256比特
+* 迭代64轮
+
+# 第六章 数字签名
+
+重点
+
+* 数字签名应具有的特性
+* RSA数字签名体制的原理、弱点及改进
+* ElGamal数字签名体制
+* DSS数字签名体制
+* 交互式证明
+
+数字签名特性
+
+* 签名是可信的：任何人可验证签名的有效性。
+* 签名是不可伪造的：除合法签名者外，其他人伪造签名是困难的。
+* 签名是不可复制的：一消息的签名不能复制为另一消息的签名。
+* 签名的消息是不可改变的：经签名的消息不能被篡改。
+* 签名是不可抵赖的：签名者事后不能否认自己的签名。
+
+RSA
+
+* 签名见笔记
+* 缺点：
+  * 对任意 $y∈Z_n$，任何人可计算 $x≡y^e mod n$，因此任何人可伪造对随机消息*x*的签名。
+  * 如果消息  x1和 x2 的签名分别为 y1 和 y2，则知道 x1、y1、x2,、y2 的人可伪造对消息 x1 x2 的签名 y1 y2 。
+  * 在RSA签名方案中，需签名的消息 $x∈Z_n$，所以每次只能对 $[log_2n]$ 位长的消息进行签名。签名速度慢。
+* 改进：签名之前求消息的Hash值
+
+DSS和ElGamal签名见笔记
+
+交互证明
+
+* 证明者P、验证者V。P知道某一秘密（如公钥密码体制的秘密钥或一平方剩余x的平方根），P希望使V相信自己的确掌握这一秘密。
+* 交互证明比较典型的方式：每轮V都向P发出一询问，P向V做出一应答。所有轮执行完后，V根据P是否在每一轮对自己发出的询问都能正确应答，以决定是否接受P的证明
+
+Schnorr
+
+Okamoto
+
+# 第七章 密码协议
+
+重点
+
+* Diffie-Hellman密钥交换原理及安全性
+* Shamir门限方案
+* Kerberos协议
+* 一次性口令协议
+
+
+
 
 
