--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -919,6 +919,83 @@ Java 数据库连接（JDBC），是一种用于执行 SQL 语句的 Java API。
 
 考基础的代码
 
+```java
+//加载驱动
+class.forName("org.postgresql.Driver");
+//建立连接
+Connection conn = DriverManager.getConnection("jdbc:postgresql://localhost:5432/testdb", "username", "passWord");
+//创建statement对象
+Statement stmt = conn.createStatement();
+//执行sql语句
+String sql = "INSERT INTO public.student (sid, sname, gender, birthday, major, phone)" 
+                  + " VALUES ('2017001', '张山', '男', '1998-10-10','软件工程','13602810001')";
+stmt.executeUpdate(sql);
+//保存结果
+ResultSet rs = stmt.executeQuery(sql);
+//关闭连接
+rs.close();
+stmt.close()
+conn.close();
+```
+
+* executeQuery()：返回语句执行后的单个结果集的，所以通常用于select语句 
+* executeUpdate()返回值是一个整数，指示受影响的行数（可以用于update、insert、delete语句）
+
+* ResultSet里有get方法获取具体的值。想要取得下一条记录，就要使用ResultSet的next()方法 ,如果我们想要得到ResultSet里的所有记录，就应该使用while循环。
+
+MYSQL的示例，postgresql同理
+
+```java
+import java.sql.*;
+
+public class JDBCTest {
+
+	public Connection getConnection() {
+		Connection conn = null;
+		try {
+			Class.forName("com.mysql.cj.jdbc.Driver");//加载数据库驱动类
+		}catch(ClassNotFoundException e) {
+			e.printStackTrace();
+		}
+		
+		try {
+			conn = DriverManager.getConnection("jdbc:mysql://localhost:3306/test?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC","root","root");
+			System.out.println("Access!");
+		}catch(SQLException e) {
+			e.printStackTrace();
+		}
+		return conn;
+	}
+	
+	public static void select() throws SQLException {
+		Statement stmt = null;
+		JDBCTest c =new JDBCTest();
+		Connection conn = c.getConnection();
+		stmt = conn.createStatement();
+		String sql;
+        sql = "SELECT * FROM grade";
+        ResultSet rs = stmt.executeQuery(sql);
+        while(rs.next()){
+            // 通过字段检索
+            int Score  = rs.getInt("Score");
+            String SID = rs.getString("SID");
+            // 输出数据
+            System.out.print("SID: " + SID);
+            System.out.print(", Score: " + Score);
+            System.out.print("\n");
+        }
+        rs.close();
+        stmt.close();
+        conn.close();
+	}
+	
+	
+	public static void main(String[] args) throws SQLException {
+		select();
+		System.out.print("1");
+	}
+}
+```
 
 
 # 7 NoSQL
