--- a/课内/数据库.md
+++ b/课内/数据库.md
@@ -395,6 +395,12 @@ E-R模型：实体-联系模型
 
 范式
 
+* 第一范式：关系表中的属性不可再细分
+* 第二范式：消除关系中的属性部分函数依赖。非主键列必须完全依赖于主键，而不能只依赖于部分主键
+* 第三范式：切断关系中的属性传递函数依赖。非主键列之间不能存在传递依赖关系，即一个非主键列不能依赖于另一个非主键列。
+* BCNF范式：所有函数依赖的决定因子都是候选键。所有非主属性都完全函数依赖于主属性
+* 第四范式：消除多值函数依赖。任何多值依赖（即存在一个或多个重复的数据行，但其他数据行却不重复）都被消除掉。简单来说，如果一个关系表中存在多个相似但不完全相同的记录，则该关系表不满足第四范式。就是有多个值的（一对多），就单独拆出来一张表
+
 
 
 # 高级sql语句
