--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -332,3 +332,156 @@ CPU工作模式：特权模式、用户模式
 
 # 4 存储器管理
 
+> 重难点：
+>
+> * 重定位的基本概念：为什么要引入
+> * 如何提高内存利用率：离散分配、对换机制、动态链接、虚拟存储器、存储器共享动态分区分配方式：分配、回收算法
+> * 基本分页存储管理方式：为什么引入；地址变换机构和过程（含具有快表的情况）
+> * 基本分段存储管理方式：为什么引入；地址变换机构和过程（含具有快表的情况）；信息的共享和保护
+> * 虚拟存储器的基本概念：为什么要引入；特征；实现虚拟存储的关键技术
+> * 请求分页系统的基本原理：页表机制；地址变换过程；页面置换算
+> * 访问内存的有效时间
+>
+> 典型问题：
+>
+> * 存储器管理的基本任务
+> * 动态重定位的概念、实现方式，什么情况下需要重定位
+> * 比较连续分配与离散分配
+> * 基于空闲分区链的内存分配与回收算法的应用实例：首次适应法，循环首次适应法，最佳适应法、最坏适应法
+> * 在某分页系统中，给定内存容量和物理块大小，计算物理块的数量；对给定的进程页表，将给定的逻辑地址，计算出其对应的物理地址并画出地址变换流程图。
+> * 在某分段系统中对给定的进程段表，将给定的逻辑地址，计算出其对应的物理地址并画出地址变换流程图。
+> * 请求分页系统过程的各种问题，并用流程图的方式表示地址变换过程
+> * 对给定的问题，按各种页面置换算法，写页面调入过程，计算和分析缺页率，并对多种算法的性能作比较分析
+
+## 4.1 存储器的层次结构
+
+> 存储器的层次结构——寄存器、高速缓存、内存、磁盘缓存、磁盘
+
+主存储器/内存：用于保存进程运行时的程序和数据。CPU的控制部件只能从主存中取得指令和数据到CPU寄存器，同样，CPU寄存器中的数据可存入主存。  CPU与外设交换数据必须依托于主存。 
+
+寄存器：寄存器访问速度最快，与CPU协调工作。
+
+高速缓存：CPU对高速缓存的访问，其速度比访问主存快，比访问寄存器慢。 根据程序执行的局部性原理，将主存中一些经常访问的数据存放在高速缓存中，减少访问主存的次数，提高程序的执行速度。 有些计算机系统设置了两级高速缓存，即，一级高速缓存与二级高速缓存。
+
+磁盘缓存：内存中一块存储区，对应于某固定磁盘，临时存储磁盘数据（如，数据预取）。
+
+存储器管理的目的和功能：
+
+1. 主存储器的分配和管理
+2. 提高主存储器的利用率
+3. “扩充”主存容量：这是借助于提供虚拟存储器或其它自动覆盖技术来达到的。即为用户提供比主存的存储空间还大的地址空间。
+4. 存储保护
+
+存储分配
+
+* 直接指定方式，缺点
+* 静态分配方式，特点
+* 动态分配方式，特点
+
+## 4.2 程序的装入和链接
+
+编译（编译程序接受完整的源一级的程序，并以类似于成批的方式生成完整的目标一级的模块）→链接（链接程序实现将目标模块链接成装入模块）→装入（装入程序将装入模块装入内存并执行）
+
+装入：
+
+* 绝对装入方式
+* 可重定位装入方式（重定位）
+
+重定位：经编译得到的目标模块中为相对地址（通常从0开始），即地址都是相对于0开始的。装入模块中的逻辑地址与实际装入内存的物理地址不同。装入内存时，相对地址（数据、指令地址）要作出相应的修改以得到正确的物理地址，这个修改的过程称为重定位。
+
+静态重定位：装入内存时一次完成。适用于多道程序环境，可以将装入模块装入到内存中任何允许的位置
+
+* 物理地址=相对地址+内存中的起始地址​
+
+* 优缺点
+
+动态运行时装入方式/动态重定位：装入程序将装入模块装入内存后，并不立即把装入模块中的相对地址转换为绝对地址，而是把这种地址转换推迟到程序执行时进行。在硬件地址变换机构的支持下，随着对每条指令或数据的访问自动进行地址变换
+
+* 实现：利用一个重定位寄存器（RR），该寄存器的值是由进程调度程序根据作业分配到的存储空间起始地址来设定的。
+* 优缺点
+
+链接：将经过编译后所得到的一组目标模块以及它们所需要的库函数，装配成一个完整的装入模块
+
+* 静态链接
+* 装入时动态链接
+* 运行时动态链接（最常用）
+
+## 4.3 连续分配方式
+
+连续分配：为用户程序分配的一个连续的内存空间
+
+* 单一连续分配：单用户系统在一段时间内，只有一个进程在内存，故内存分配管理十分简单，内存利用率低。内存分为两个区域，一个供操作系统使用（系统区），一个供用户使用（用户区）
+
+  * 优点：易于管理
+  * 缺点：①对要求内存空间少的程序，造成内存浪费；②程序全部装入，很少使用的程序部分也占用内存
+
+* 分区式分配：系统把内存用户区划分为若干分区，分区大小可以相等，也可以不等。一个进程占据一个分区。这是早期用于多道程序的一种较简单的存储管理方式。有一张分区说明表，指出分配的分区数、大小、起始地址、状态（是否已分配）
+
+  * 固定分区：分区表记录分区大小和使用情况
+
+    ①优点：易于实现，开销小。
+
+    ②缺点：内碎片造成浪费。分区总数固定，限制了并发执行的程序数目。存储空间利用率低
+
+  * 动态（可变）分区（见下文）
+
+* 可重定位分区分配（见下文）
+
+> 内零头/内碎片：内存中已分配给用户但未被利用的区域
+>
+> 外零头：没有分配但无法分配的空间，大小而无法分配
+
+动态分区分配：
+
+* 方案：分区数目固定、分区数目可变
+
+* 数据结构：空闲分区表、空闲分区链
+
+* 分区分配算法：前4个基于顺序搜索，后2个基于索引搜索。各个算法都有优缺点
+
+  1. 最佳适应算法(Best Fit)：选择大小最接近的存储区域
+
+  2. 最坏适应算法(Worst Fit)：选择最大的空白区，往往导致剩下的空白区也是最大的
+
+  3. 首次适应算法(First Fit)：空白区地址递增构成顺序链，选链上第一个满足的空白块
+
+  4. 循环首次（下次）适应算法(Next Fit)/带旋转指针的首次适应算法：空白快构成循环链，从上次查找结束位置足够大的空白区就划出去分配
+
+  5. 快速适应算法(Quick Fit)：将空闲分区根据其容量大小进行分类，对于每一类具有相同容量的所有空闲分区，单独设立一个空闲分区链表。根据进程的长度，寻找到能容纳它的最小空闲分区链表，并取下第一块进行分配即可
+
+  6. 伙伴系统
+
+     ```
+     首先计算一个 i 值，使 2^(i－1) < n ≤ 2^i；
+     在空闲分区大小为 2^i 的空闲分区链表中查找。
+     if  找到，即把该空闲分区分配给进程。
+     else  在分区大小为2i＋1的空闲分区链表中寻找;
+     	//表明长度为2i的空闲分区已经耗尽
+     	if  找到大小为2i＋1 的空闲分区
+         	把该空闲分区分为相等的两个分区（一对伙伴），其中一个用于分配，另一个加入分区大小为 2i 的空闲分区链表中。
+     	else  查找大小为2i＋2 的空闲分区……
+     ```
+
+* 分区分配操作：分配内存、回收内存（与前一个空闲分区邻接向上合并、与下面的邻接向下合并、上下邻接合并三个、均不邻接新建）
+
+> PPT上的题，没看懂
+>
+> ![image-20230608195502292](https://github.com/LyrisLaurier/notes/assets/94295495/1c5d0e81-935c-4364-a1d4-a921c711e366)
+
+
+哈希算法：利用哈希快速查找的优点，以及空闲分区在可利用空间表中的分布规律，建立哈希函数，构造一张哈希表，以空闲分区大小为关键字，每一个表项记录了一个对应的空闲分区链表表头指针
+
+可重定位分区分配
+
+* 紧凑：可以合并小分区
+* 动态重定位
+
+## 4.4 基本分页存储管理方式
+
+离散分配：程序在内存中不一定连续存放
+
+* 分页存储管理
+* 分段存储管理
+* 段页式存储管理
+
+ 
