--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -480,8 +480,60 @@ CPU工作模式：特权模式、用户模式
 
 离散分配：程序在内存中不一定连续存放
 
-* 分页存储管理
-* 分段存储管理
-* 段页式存储管理
+- 分页存储管理
+- 分段存储管理
+- 段页式存储管理
 
+离散-分页、分块→优点：没有外零头，仅有一个小于页面的内零头
+
+> 系统中页块大小不变
+
+页面大小：一种机器只采用一种大小的页面（小页面/大页面-1KB~8KB）
+
+数据结构
+
+* 页表：每个进程对应 1 个页表，描述该进程的各页面在内存中对应的物理块号。包括页号、物理块号、还可能有存取控制字段
+* 作业表：整个系统1张，记录作业的页表情况，包含进程号、页表长度、页表始址等信息
+* 空闲块表：整个系统1张，记录主存当前空闲块
+
+地址变换机构：逻辑地址（页号+页内偏移量）→物理地址（物理块号+物理块内的偏移），二者大小一样因此偏移量一致，关键是由页表完成页号到物理块号的转换
+
+* 使用寄存器存放页表
+* 将页表存储在内存中：页表寄存器PTR，记录当前运行的进程的页表在内存中的始址和页表长度。（平时存于PCB中，要运行时才装入PTR中）
+
+分页系统的地址变换过程
+
+1. 根据逻辑地址计算处页号和页内偏移量
+2. 从PTR中得到页表首址，然后检索页表，查找指定页面对应的页框号
+3. 用页框号乘以页面大小获得其对应的起始地址，并将其送入物理地址的高端
+4. 将页内偏移量送入物理地址低端，形成完整的物理地址
+
+PPT上的一个题（还有俩类似的）
+
+![OF177{0Y1}ZH{8`WQ}1@M`7](https://github.com/LyrisLaurier/notes/assets/94295495/5bccc2a7-4b4c-4113-b860-1a0a2560f424)  
+
+具有快表的地址变换机构：为进程页表设置一个专用的高速缓冲存储器-快表TLB/联想存储器，专门保存当前进程最近访问过的一组页表项
+
+命中、不命中、命中率
+
+访问内存有效时间EAT：从进程发出指定逻辑地址的访问请求，经过地址变换，再到内存中找到对应的物理单元并取出数据，所花费的总时间
+
+平均存取时间计算：访问内存时间t1，检索快表时间t2
+
+* 命中：耗费时间是 t1+t2
+* 不命中：耗费时间就是 t1+t2+t2
+* 因此平均存取时间就是 $(t1+t2)×命中率+(t1+t2+t2)×(1-命中率)$ 
+
+二级页表：页表过多没有足够大的连续空间
+
+多级页表：64位机器一般采用多级页表（4级以上）
+
+反置页表IPT：避免一个进程一个页表，一般采用Hash表来检索。IPT是为主存中的每一个物理块建立一个页表项并按照块号排序；该表每个表项包含正在访问该物理块的进程标识、页号及特征位,用来完成主存物理块到访问进程的页号的转换。
+
+* 地址转换过程：给出进程标识和页号,用它们去比较IPT,若整个反置页表中未能找到匹配的页表项,说明该页不在主存,产生请求调页中断,请求操作系统调入;否则，该表项的序号便是物理块号,块号加上位移,便形成物理地址。
+
+> 反置页表没看懂
  
+## 4.5 分段式存储管理
+
+
