--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -512,6 +512,10 @@ PPT上的一个题（还有俩类似的）
 
 ![OF177{0Y1}ZH{8`WQ}1@M`7](https://github.com/LyrisLaurier/notes/assets/94295495/5bccc2a7-4b4c-4113-b860-1a0a2560f424)  
 
+地址变换图示例
+
+![image-20230609104232251](https://github.com/LyrisLaurier/notes/assets/94295495/3a463014-9da7-4783-a4d5-8ff5f5c5d7bc)
+
 具有快表的地址变换机构：为进程页表设置一个专用的高速缓冲存储器-快表TLB/联想存储器，专门保存当前进程最近访问过的一组页表项
 
 命中、不命中、命中率
