--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -540,4 +540,46 @@ PPT上的一个题（还有俩类似的）
  
 ## 4.5 分段式存储管理
 
+分段存储管理方式的引入
+
+* 方便编程
+* 分段共享：①一般实现程序和数据共享时都是以信息的逻辑单位（过程、函数或文件）为基础的。②在分页系统中的每一页都只是存放信息的物理单位，其本身并无完整意义，因而不便于实现信息共享。③段是信息的逻辑单位，可以为共享过程建立一个独立的段，更便于实现程序和数据的共享
+* 分段保护：①对内存中的信息的保护，同样也是对信息的逻辑单位进行保护。②采用分段存储管理，对实现保护，将是更有效和方便。    
+* 动态链接：程序运行时，先将主程序所对应的目标程序装入内存并启动运行，当运行过程中又需要调用某段时，才将该段调入内存并进行链接。
+* 动态增长：在实际使用中，往往有些段，特别是数据段会随着程序的运行不断增大，而这种增长事先并不知晓会增长到多大，采用其它存储管理方式是难以应付的，而分段存储管理却能较好的解决这一问题。
+
+分段管理：管理由若干分段组成的作业，且按分段来进行存储分配。关键在于，如何保证分段(二维)地址空间中的一个作业在线性(一维)的存储空间中正确运行。也就是说，如何把分段地址结构变换成线性的地址结构，和分页管理一样，可采用动态重定位技术，即通过地址变换机构来实现
+
+段表：实现从逻辑段刀物理内存区的映射。通常放在内存中。分段制造了二维空间，而内存是一维的
+
+地址变换机构：①根据段表寄存器的内容找到该作业的段表地址；  ②利用有效地址中的段号2作为检索段表的索引，得到该段在主存的起始地址；  ③将段的主存起始地址和位移量W相加，即得访问主存的物理地址  
+
+![image-20230609112757575](https://github.com/LyrisLaurier/notes/assets/94295495/7fc0c85c-2c1a-44f5-ab89-f1fb5ad42f7f)
+
+也可设置联想存储器/快表，提高访问速度
+
+信息共享
+
+* 可重入代码：  是一种允许多个进程同时访问的代码（可共享），且是一种不允许任何进程对其进行修改的代码。即代码区可以用同一部分
+
+> 一个多用户系统可接纳40个用户，它们都执行一个文本编辑程序(ED)，ED代码共160K，每个用户还有40K的数据区(DA)。
+>
+> （1）不采用信息共享时需占用的内存空间？ ( 160K + 40K ) \* 40 = 8000K
+>
+> （2）采用信息共享（若ED可共享）后占用的内存空间？ 160K + 40K \* 40 = 1760K
+
+* 分页共享：假定页面大小为4K，两个用户，那么B上题的代码160KB就占40个页面。数据区40KB占10个页面。
+
+  对于代码页面，它必须把共享的代码安排到所有共享它的作业地址空间中相同页号的页面中。即共享代码所在的地址空间必须重叠
+  
+  ![image-20230609113426152](https://github.com/LyrisLaurier/notes/assets/94295495/e4e8c78b-f127-4aad-8f50-47890b839bb5)
+
+* 分段共享：分段的共享是通过两个作业段表的相应表目都指向COS过程的同一物理副本来实现的
+
+  ![image-20230609113553818](https://github.com/LyrisLaurier/notes/assets/94295495/9e21553f-a7cc-4292-a4d2-5ea2812b8873)
+
+> 分段共享没看太明白
+
+段页式存储管理方式
+
 
