--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -580,6 +580,50 @@ PPT上的一个题（还有俩类似的）
 
 > 分段共享没看太明白
 
-段页式存储管理方式
+段页式存储管理方式：先将用户程序分段，每段内再划分成若干页，每段有段名（段号），每段内部的页有一连续的页号
+
+引入
+
+* 分页管理内存管理效率高：没有外零头；内零头小
+* 分段管理符合模块化思想：每个分段都具备完整的功能；方便代码共享、保护；没有内零头，存在外零头
+
+逻辑地址结构：段号S、段内页号P、页内相对地址(位移量)W  ![image-20230609143929136](https://github.com/LyrisLaurier/notes/assets/94295495/71ed5ffb-8e6a-43e7-8295-9bceb13fedb6)
+
+地址变换：设置有段表、段内页表
+
+1. 从段表寄存器从获得进程段表的起始地址，根据该地址，查找进程的段表
+2. 根据逻辑地址指定的段号检索段表，找到对应段的页表起始地址
+3. 再根据逻辑地址中指定的页号检索该页表，找到对应页所在的物理块号
+4. 最后用物理块号加上逻辑地址中指定的页内偏移量，形成物理地址
+
+![image-20230609144737044](https://github.com/LyrisLaurier/notes/assets/94295495/9a8ae5bf-9582-4637-b69a-aa89099f76eb)
+
+在段页式存储管理方式中，每访问一次数据，需访问3次内存：一次访问内存中的段表，第二次访问内存中的页表，第三次访问相应数据→设置快表，包含段号、页号、物理块号
+
+> 带中断的地址变换过程
+
+段页式存储管理方式的评价
+
+对换：把内存中暂不能运行的进程或暂时不用和程序和数据，换到外存上，以腾出足够的内存空间，把已具备运行条件的进程，或进程所需要的程序和数据，换入内存
+
+* 整体对换/进程对换
+* 页面对换/分段对换
+
+需实现的功能
+
+* 对换空间的管理：外存分为文件区和对换区，文件区离散分配，对换区连续分配。
+
+  * 对换区：空闲分区表/链的表目包含对换分区首址、对换分区长度，基本单位盘块。
+
+    分配算法有首次适应算法、循环首次适应算法、最佳适应算法
+
+* 进程的换入
+
+  * 选择：选阻塞或睡眠状态的进程，若无则选就绪状态
+  * 换入
+
+* 进程的换出
+
+## 4.6 虚拟存储器
 
 
