--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -633,4 +633,35 @@ PPT上的一个题（还有俩类似的）
 
 ## 4.6 虚拟存储器
 
+提出：①一个程序要求的存储容量超过整个内存空间；②有大量的作业需要装入内存运行而内存空间不足
+
+内存扩充方法：物理扩充、逻辑扩充
+
+基本工作情况：基于局部性原理，仅装入当前运行要的页/段，其余放外存→运行所需不在内存就请求调页/段→若内存满则利用置换功能换掉不用的
+
+虚拟存储器：是指具有请求调入功能和置换功能，能从逻辑上对内存容量加以扩充的一种存储器系统。
+
+> 虚拟存储管理以页/段为单位，对换技术以进程为单位
+
+虚拟存储器的实现方法
+
+* 请求分页系统：在纯分页系统的基础上增加了请求调页、页面置换两大功能所形成的页式虚拟存储系统。为实现请求调页、页面置换两大功能，系统必须提供硬件支持：①请求分页的页表机制。②缺页中断机构。③地址变换机构。
+
+  此外，实现请求调页、页面置换两大功能还需得到OS的支持
+
+* 请求分段系统：在纯分段系统的基础上增加了请求调段、分段置换两大功能所形成的段式虚拟存储系统。需提供的硬件支持：①请求分段的段表机制。②缺段中断机构。③地址变换机构。还需得到OS支持
+
+* 段页式虚拟系统：建立在段页式系统的基础上，通过增加了请求调页、页面置换两大功能所形成的段页式虚拟存储系统
+
+虚拟存储器的特征
+
+* 多次性：多次性是指一个作业被分成多次调入内存运行。 
+* 对换性：对换性是指作业的运行过程中进行换进、换出。换进和换出能有效地提高内存利用率。 
+* 虚拟性：虚拟性是指能够从逻辑上扩充内存容量，使用户所看到的内存容量远大于实际内存容量。
+
+> 虚拟性是以多次性和对换性为基础的；而多次性和对换性又必须建立在离散分配的基础上
+
+典型问题：抖动-频繁的换入换出。原因是选择的页面或段不恰当
+
+## 4.7
 
