--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -663,5 +663,46 @@ PPT上的一个题（还有俩类似的）
 
 典型问题：抖动-频繁的换入换出。原因是选择的页面或段不恰当
 
-## 4.7
+## 4.7 请求分页存储管理系统
 
+硬件支持
+
+* 页表机制 ![image-20230609152619401](https://github.com/LyrisLaurier/notes/assets/94295495/4331252f-410e-47f0-ab23-4885bb930eff)
+* 缺页中断机构，缺页中断处理过程
+* 地址变换机构
+
+内存分配策略和算法
+
+* 最小物理块数的确定
+* 物理块的分配策略：固定分配局部置换、可变分配全局置换、可变分配局部置换
+* 物理块的分配算法：平均分配算法、按比例分配算法、考虑优先权的分配算法（一部分按比例一部分考虑考虑优先权）
+
+调页策略
+
+* 何时装入：预调页、请求调页
+* 何处调入：
+  * 系统拥有足够的对换区空间：全从对换区调入
+  * 缺少足够的对换区空间：不会修改的从文件区调入
+  * UNIX方式：进程相关、未运行过的从文件区，运行过被换出的从对换区
+* 调入过程：缺页中断→中断处理程序转入缺页中断处理程序→内存满则置换（如果页修改需要写回磁盘）→调入，写入快表→物理地址
+
+页面置换算法
+
+* 最佳(优)置换算法：从主存中移出永远不再需要的页面；如无这样的页面存在，则应选择最长时间不需要访问的页面
+* 先进先出（FIFO）页面置换算法：选择作业中驻留时间最长(即最老)的一页淘汰
+* 最近最久未使用（LRU）置换算法：选择在最近一段时间内最久不用的页面予以淘汰
+* Clock置换算法
+* 改进型Clock置换算法
+* 其它置换算法
+
+> 去看PPT上的例题，大概在P212页往后
+
+
+
+## 4.8 缺页率对有效访问时间的影响
+
+
+
+
+
+## 4.9 请求分段存储管理方式
