--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -645,11 +645,9 @@ PPT上的一个题（还有俩类似的）
 
 虚拟存储器的实现方法
 
-* 请求分页系统：在纯分页系统的基础上增加了请求调页、页面置换两大功能所形成的页式虚拟存储系统。为实现请求调页、页面置换两大功能，系统必须提供硬件支持：①请求分页的页表机制。②缺页中断机构。③地址变换机构。
+* 请求分页系统：在纯分页系统的基础上增加了请求调页、页面置换两大功能所形成的页式虚拟存储系统。为实现请求调页、页面置换两大功能。硬件支持、需得到OS的支持
 
-  此外，实现请求调页、页面置换两大功能还需得到OS的支持
-
-* 请求分段系统：在纯分段系统的基础上增加了请求调段、分段置换两大功能所形成的段式虚拟存储系统。需提供的硬件支持：①请求分段的段表机制。②缺段中断机构。③地址变换机构。还需得到OS支持
+* 请求分段系统：在纯分段系统的基础上增加了请求调段、分段置换两大功能所形成的段式虚拟存储系统。硬件支持、需得到OS的支持
 
 * 段页式虚拟系统：建立在段页式系统的基础上，通过增加了请求调页、页面置换两大功能所形成的段页式虚拟存储系统
 
@@ -697,12 +695,31 @@ PPT上的一个题（还有俩类似的）
 
 > 去看PPT上的例题，大概在P212页往后
 
-
-
 ## 4.8 缺页率对有效访问时间的影响
 
+缺页中断处理时间：缺页中断服务时间+页面传送时间（包括读缺页和写置换页的时间）+进程重新执行的时间，其他二者时间较短因此仅考虑页面传送时间。
 
+内存读写周期为t，查找快表时间为λ，缺页中断处理时间为ɛ
 
+* 在内存且在快表，只需访问一次内存：EAT=λ+t
+* 在内存不在快表，访问两次内存（一次读页表一次读数据），更新快表：EAT=2(λ+t)
+* 不在内存：查快表、查页表、处理缺页中断、更新快表、访问物理地址：EAT=2(λ+t)+ɛ
+* 快表命中率为α，缺页中断率为f：EAT= λ + α t + (1- α)[t + f(t +ɛ +λ) + (1-f)(t +λ)]
 
+CPU利用率急剧下降-抖动/颠簸：原因是系统内进程增多
+
+抖动：局部抖动、全局抖动，产生原因
+
+工作集模型
 
 ## 4.9 请求分段存储管理方式
+
+工作原理：请求分段系统中，程序运行之前，只需先调入若干个分段（不必调入所有的分段），便可启动运行。当所访问的段不在内存中时，可请求OS将所缺的段调入内存
+
+硬件支持：
+
+* 请求分段的段表机制 ![image-20230609162728473](https://github.com/LyrisLaurier/notes/assets/94295495/a25b0c66-f1ff-4b80-8dcb-1f0fb2753b69)
+* 缺段中断机构
+* 地址变换机构。
+
+
