--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -722,4 +722,21 @@ CPU利用率急剧下降-抖动/颠簸：原因是系统内进程增多
 * 缺段中断机构
 * 地址变换机构。
 
+分段的共享与保护：
+
+* 共享段表分配与回收
+* 分段保护：越界检查、存取控制检查、环保护机构
+
+> 分段的共享与保护好像不是重点，没细看
+
+*****
+
+# 5 IO系统/设备管理
+
+## 5.1 I/O系统的功能、模型和接口 
+
+
+
+
+
 
