--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -415,6 +415,8 @@ CPU工作模式：特权模式、用户模式
 
 ## 4.3 连续分配方式
 
+> 连续分配方式——单一连续分配、分区分配（固定、动态）、动态重定位分区分配
+
 连续分配：为用户程序分配的一个连续的内存空间
 
 * 单一连续分配：单用户系统在一段时间内，只有一个进程在内存，故内存分配管理十分简单，内存利用率低。内存分为两个区域，一个供操作系统使用（系统区），一个供用户使用（用户区）
@@ -484,6 +486,8 @@ CPU工作模式：特权模式、用户模式
 * 动态重定位
 
 ## 4.4 基本分页存储管理方式
+
+> 离散分配方式——用户程序划分、逻辑地址、内存空间划分、内存分配、管理考虑、硬件支持、地址映射过程
 
 离散分配：程序在内存中不一定连续存放
 
@@ -633,6 +637,8 @@ PPT上的一个题（还有俩类似的）
 
 ## 4.6 虚拟存储器
 
+> 虚拟存储管理——虚拟存储器、虚拟存储技术、程序局部性原理、请求分页管理、请求分段管理、页面置换算法、抖动（颠簸）
+
 提出：①一个程序要求的存储容量超过整个内存空间；②有大量的作业需要装入内存运行而内存空间不足
 
 内存扩充方法：物理扩充、逻辑扩充
@@ -733,7 +739,31 @@ CPU利用率急剧下降-抖动/颠簸：原因是系统内进程增多
 
 # 5 IO系统/设备管理
 
+> 重难点：
+>
+> * 虚拟设备和SPOOLing 技术（了解）
+>   * 什么是虚拟设备
+>   * 什么是假脱机（SPOOLing）技术，SPOOLing系统的组成
+>   * 如何利用SPOOLing技术实现共享打印机
+> * 磁盘调度
+>   * 磁盘调度的目标
+>   * 磁盘访问时间的计算
+>   * nFCFS、SSTF、SCAN、CSCAN 等算法的应用及这些调度算法的演变过程，分别解决了哪些问题；各算法的性能比较（寻道长度的计算）
+>
+> 典型问题：
+>
+> * 各种I/O 控制方式的比较
+> * 为什么引入缓冲区
+> * 缓冲如何提高I/O 速度
+> * 为什么引入设备独立性，如何实现
+> * 什么是虚拟设备，实现虚拟设备的关键技术
+> * SPOOLing技术的组成，如何利用SPOOLing 技术实现共享打印机
+> * 对各种磁盘调度算法，计算访问次序和平均寻道时间，性能
+> * 磁盘访问时间的组成和计算
+
 ## 5.1 I/O系统的功能、模型和接口 
+
+
 
 
 
