--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -763,6 +763,100 @@ CPU利用率急剧下降-抖动/颠簸：原因是系统内进程增多
 
 ## 5.1 I/O系统的功能、模型和接口 
 
+基本功能
+
+层次结构和模型
+
+总体设计目标：高效性、通用性
+
+接口：块设备接口、字符设备接口、网络通信接口
+
+## 5.2 I/O设备和设备控制器
+
+> 基本概念——设备管理重要性、设备独立性、设备分类、设备管理任务、设备管理功能
+>
+> I/O软件组成——用户进程、与设备无关软件、设备驱动程序、中断处理程序、设备控制器
+
+设备分类
+
+* 使用特性：存储设备、输入/输出设备
+* 传输速率：低速设备、中速设备、高速设备
+* 共享属性：独占设备（临界资源）、共享设备、虚拟设备
+
+设备控制器
+
+* 功能：接收CPU命令，控制I/O设备工作，解放CPU
+* 组成：设备控制器与处理机的接口、设备控制器与设备的接口、I/O逻辑
+
+I/O通道：字节多路通道、数组选择通道、数组多路通道
+
+## 5.3 中断
+
+> 见计组笔记
+
+## 5.4 设备驱动程序
+
+功能
+
+1. 接收由I/O进程发来的命令和参数, 并将命令中的抽象要求转换为具体要求。
+2. 检查用户I/O请求的合法性,了解I/O设备的状态,传递有关参数,设置设备的工作方式。
+3. 发出I/O命令并检查设备状态。
+4. 及时响应由控制器或通道发来的中断请求并处理。
+
+特点
+
+1. 驱动程序主要是指在请求I/O的进程与设备控制器之间的一个通信和转换程序。
+2. 驱动程序与设备控制器和I/O设备的硬件特性紧密相关,因而对不同类型的设备应配置不同的驱动程序。
+3. 驱动程序与I/O设备所采用的I/O控制方式紧密相关，常用中断驱动和DMA方式。
+4. 由于驱动程序与硬件紧密相关,因而其中的一部分必须用汇编语言书写。
+5. 驱动程序允许可重入。
+
+设备处理方式：一类设备一个进程，整个系统一个进程，不专门设置设备处理进程只设置设备处理程序/模块
+
+处理过程：抽象要求转换为具体要求→检查I/O请求的合法性→读出和检查设备的状态→传送必要的参数→工作方式的设置→启动I/O设备
+
+I/O控制方式
+
+* 程序I/O方式
+* 中断方式
+* 直接存储器访问方式（DMA）
+* 通道方式
+
+DMA方式用于块设备
+
+* 特点：①基本单位数据块②数据从设备直接送入内存③传送开始或结束时才要CPU干预
+* 组成：主机与DMA控制器接口、DMA控制器与块设备接口、I/O控制逻辑
+
+I/O通道方式
+
+## 5.5 与设备无关的I/O软件
+
+与设备无关软件/设备独立性/设备无关性：应用程序独立于具体使用的物理设备，即用户在编程序时使用的设备与实际设备无关
+
+* 逻辑设备、物理设备
+* 优点：灵活性；易于实现重定向
+* 主要功能
+
+设备分配的数据结构
+
+
+
+
+
+
+
+## 5.6 用户层的I/O软件
+
+
+
+## 5.7 缓冲管理
+
+
+
+## 5.8 磁盘存储器的性能和调度
+
+
+
 
 
 
