--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -833,33 +833,86 @@ I/O通道方式
 
 与设备无关软件/设备独立性/设备无关性：应用程序独立于具体使用的物理设备，即用户在编程序时使用的设备与实际设备无关
 
-* 逻辑设备、物理设备
-* 优点：灵活性；易于实现重定向
-* 主要功能
+- 逻辑设备、物理设备
+- 优点：灵活性；易于实现重定向
+- 主要功能
 
 设备分配的数据结构
 
+* 设备控制表DCT
+* 控制器控制表、通道控制表、系统设备表
 
+设备固有属性：独占、共享、可虚拟
 
+设备分配算法：先来先服务、优先级高优先
 
+独占设备的分配程序：分配设备、分配控制器、分配通道
 
-
+> 这章好乱
 
 ## 5.6 用户层的I/O软件
 
+假脱机技术（Spooling）：通过独占设备来模拟共享设备，将独占设备改造成共享设备，从而提高了设备利用率和系统效率
 
+* 组成：输入/出井、输入/出缓冲区、输入进程SPi和输出进程SP0、井管理程序
+
+* 共享打印机：打印机为独占设备,利用SPOOLing技术可将之改造为共享设备，处理如下
+  * 由输出进程在输出井中为之申请一个空闲磁盘块区, 并将要打印的数据送入其中
+  * 输出进程再为用户进程申请一张空白的用户请求打印表,并将用户的打印要求填入其中, 再将该表挂到请求打印队列上
+  * 系统对于用户的打印输出，但并不真正把打印机分配给该用户进程，而是先在输出井中申请一个空闲盘块区，并将要打印的数据送入其中；然后为用户申请并填写请求打印表，将该表挂到请求打印队列上。若打印机空闲，输出程序从请求打印队首取表，将要打印的数据从输出井传送到内存缓冲区，再进行打印，直到打印队列为空。
+* 特点：提高I/O速度，将独占设备改造为共享设备，实现虚拟设备功能
 
 ## 5.7 缓冲管理
 
+引入：①CPU与I/O设备间速度不匹配②减少中断频率③数据粒度不匹配问题④提高并行性
 
+提前读、延后写
+
+缓冲区的组织形式：
+
+* 单缓冲
+* 双缓冲
+* 循环缓冲
+* 缓冲池
+
+缓冲池：空缓冲区、装满输入数据的缓冲区、装满输出数据的缓冲区
+
+```
+Procedure Getbuf(type)
+	begin
+		Wait(RS(type)); //资源信号量
+		Wait(MS(type));//互斥信号量
+		B(number)∶=Takebuf(type);//从队首摘下一个缓冲区
+		Signal(MS(type));
+	end
+Procedure Putbuf(type, number)
+	begin
+		Wait(MS(type));
+		Addbuf(type, number);//将指定缓冲区挂在队列的队尾
+		Signal(MS(type));
+		Signal(RS(type));
+	end
+```
 
 ## 5.8 磁盘存储器的性能和调度
 
+数据组织和格式：磁道号、磁头号、扇区、字节
 
+类型：固定头磁盘、移动头磁盘
 
+柱面、磁头、扇区
 
+访问过程：访问时间Ta=Ts+1/2r+b/rN
 
+* 寻道：Ts=m*n+s，常量m、磁道数n、磁臂启动时间s
+* 旋转延迟：指定扇区旋转到磁头下所需时间Tr=1/2r（均值），每秒r转
+* 数据传输：Tt=b/rN，读写字节数b，每道上的字节数
 
+磁盘访问时间计算（PPT-136往后的题）
+
+磁盘调度算法
+
+ 
 
 
 
