--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -904,13 +904,68 @@ Procedure Putbuf(type, number)
 
 访问过程：访问时间Ta=Ts+1/2r+b/rN
 
-* 寻道：Ts=m*n+s，常量m、磁道数n、磁臂启动时间s
-* 旋转延迟：指定扇区旋转到磁头下所需时间Tr=1/2r（均值），每秒r转
-* 数据传输：Tt=b/rN，读写字节数b，每道上的字节数
+- 寻道：Ts=m*n+s，常量m、磁道数n、磁臂启动时间s
+- 旋转延迟：指定扇区旋转到磁头下所需时间Tr=1/2r（均值），每秒r转
+- 数据传输：Tt=b/rN，读写字节数b，每道上的字节数
 
 磁盘访问时间计算（PPT-136往后的题）
 
-磁盘调度算法
+磁盘调度算法（PPT-143往后演示）
+
+* 先来先服务FCFS
+* 最短寻道时间优先SSTF
+* 扫描算法SCAN：按一个方向动完再转向
+* 循环扫描算法CSCAN
+* N—Step—SCAN：N个子队列，按FCFS处理队列，每个队列按SCAN
+* FSCAN：两个子队列
+
+磁盘高速缓存的形式、数据交付、置换算法、
+
+提高I/O速度的方法
+
+廉价磁盘冗余阵列（自学）
+
+PPT-178后还有点本章计算题
+
+# 6 文件管理
+
+> 重难点：
+>
+> * 文件的逻辑结构：顺序文件、索引文件和索引顺序文件
+>   * 原理和特征
+>   * 组织方式、访问方法及各种文件形式的比较
+> * 外存分配方式：连续分配、链接分配和索引分配原理、优缺点
+>   * 显示链接FAT、增量式索引分配
+> * 目录管理：目录管理的要求
+>   * 文件控制块（FCB）
+>   * 索引结点
+>   * 目录结构：单级、两级和多级
+> * 文件磁盘空间管理
+>   * 空闲表法和空闲链法
+>   * 位示图法：分配和回收的具体计算
+>
+> 典型问题：
+>
+> * 画出链接分配方式的链接情况和FAT 的链接情况、FAT长度计算等。
+> * 增量式索引分配的的寻址方式、地址转换的计算和索引结点的地址映射图（书P278)
+> * 对给定的位示图和文件的分配和回收需求，具体写出分配过程和回收过程。
+> * 目录管理的要求；目前广泛采用的目录结构及其优点
+
+## 6.1 文件和文件系统
+
+## 6.2 文件的逻辑结构
+
+## 6.3 文件的物理结构
+
+## 6.4 文件存储空间的管理
+
+## 6.5 目录管理
+
+## 6.6 文件共享
+
+## 6.7 文件保护
+
+
 
  
 
