--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -953,11 +953,78 @@ PPT-178后还有点本章计算题
 
 ## 6.1 文件和文件系统
 
+> 文件基本概念——文件、文件系统、文件分类、文件操作、文件逻辑结构、外存分配方式
+
+盘块连续分配、盘块链式分配、盘块索引分配
+
+文件系统：操作系统中的各类文件、管理文件的软件，以及管理文件所涉及到数据结构等信息的集合
+
+文件系统的功能：管理存储空间，管理文件目录，完成文件读写，文件共享与保护，提供交互接口
+
+数据项：基本数据项、组合数据项
+
+记录：一组相关数据项的集合，用于描述一个对象在某方面的属性
+
+文件：具有文件名的一组相关元素/记录的集合，是文件系统中最大的数据单位
+
+* 属性：文件类型、长度、物理位置、建立时间
+* 分类
+  * 按用途：系统文件、用户文件、库文件
+  * 按数据形式：源文件、目标文件、可执行文件
+  * 按存取属性：只执行文件、只读文件、读写文件
+  * 按组织形式和处理方式：普通文件、目录文件、特殊文件
+
+文件操作
+
+* 对整个文件的操作：建立文件、撤消文件、打开文件、关闭文件、复制文件、修改文件名、打印或显示文件内容
+* 对文件中数据项的操作：读操作、写操作、更新操作、插入操作、删除操作
+
+文件操作的代码：PPT-36上有
+
 ## 6.2 文件的逻辑结构
+
+有结构文件：顺序文件、索引文件、索引顺序文件、直接/哈希文件
+
+顺序文件
+
+* 逻辑记录排序：串结构-按时间、顺序结构-按关键字排列
+* 优缺点：①用于批量数据处理，文件访问效率高②唯一、同时适合在磁盘和磁带中存储的文件③访问效率比堆文件高
+* 读写操作：对定长记录的用读写指针，变长记录的读写指针+长度记在记录前单元
+
+索引文件
+
+* 定长的直接存取，变长的建个索引表
+* 克服了变长记录文件不便于直接存取的缺点，而且所付出的代价也不算太大。是顺序文件和索引文件相结合的产物
+
+直接和哈希文件：关键字值→hash→物理地址，键值转换
 
 ## 6.3 文件的物理结构
 
+外存分配方法：
+
+* 连续分配：为每一个文件分配一组相邻接的盘块。一组盘块的地址定义了磁盘上的一段线性地址
+  * 文件分配表中为每个文件建立一个表项，其中记载文件的第一个数据块地址及文件长度。对于顺序文件，连续读/写多个数据块内容时，性能较好。能很快检索文件中的一个数据块。
+  * 优点：访问容易；访问速度快
+  * 缺点：要求有连续的存储空间；需事先知道文件的长度；不能灵活插入/删除记录；不适应动态增长的文件；会导致磁盘碎片严重降低外存空间利用率
+* 链接分配：通过在每个盘块上的链接指针，将同属于一个文件的多个离散的盘块链接成一个链表
+  * 隐式链接：在文件目录的每个目录项中，都须含有指向链接文件第一个盘块和最后一个盘块的指针。只适用于顺序访问，对随机访问极其低效
+  * 显示链接：把用于链接文件各物理块的指针，显式地存放在内存的一张链接表中。整个磁盘仅设置一张文件分配表FAT
+* 索引分配
+  * 单级索引分配：为每个文件分配一个索引块(表)，用于记录分配给该文件的所有盘块号，因而该索引块就是一个含有许多盘块号的数组。在建立一个文件时，只需在为之建立的目录项中填上指向该索引块的指针。
+    * 优点：支持直接访问，可以从索引块中找到第i个盘块的盘块号；不会产生外部碎片
+    * 存在问题：花费较多外存时间；大文件索引项过多，可能一个数据块放不下所有索引
+  * 两级索引分配
+  * 增量式索引分配
+
 ## 6.4 文件存储空间的管理
+
+> 文件存储空间的管理——空闲表、空闲链表、位示图
+
+基本分配单位：磁盘块
+
+空闲块登记表
+
+
 
 ## 6.5 目录管理
 
