--- a/课内/操作系统.md
+++ b/课内/操作系统.md
@@ -1022,20 +1022,65 @@ PPT-178后还有点本章计算题
 
 基本分配单位：磁盘块
 
-空闲块登记表
+空闲块登记表：
 
+* 空闲表：系统为外存上的所有空闲区建立一张空闲表，每个空闲区对应于一个空闲表项，其中包括表项序号、该空闲区的第一个盘块号、该区的空闲盘块数等信息
+* 空闲链表：将所有空闲盘区拉成一条空闲链。根据构成链所用基本元素的不同，可把链表分成空闲盘块链和空闲盘区链
+* 位示图法：磁盘上的所有盘块都有一个二进制位，由所有盘块所对应的位构成一个集合。0换出1换入
+* 成组链接法：设置空闲盘块号栈，存放当前可用的一组空闲盘块的盘块号和栈中尚有的空闲盘块总数
 
+> 成组链接法没看懂
+
+优缺点
 
 ## 6.5 目录管理
 
+> 文件目录——文件控制块、文件目录、目录文件、目录项、树型目录结构、目录查询技术
+
+目录管理要求：①按名存取②提高对目录的检索速度③文件共享④允许文件重名
+
+文件控制块FCB：是操作系统为管理文件而设置的数据结构，存放了管理文件所需的所有信息
+
+文件目录：把所有的FCB组织在一起，就构成了文件目录，即文件控制块的有序集合
+
+目录项：构成文件目录的项目（目录项就是FCB）
+
+目录文件：为了实现对文件目录的管理，通常将文件目录以文件的形式保存在外存，这个文件就叫目录文件
+
+索引节点
+
+* 磁盘索引结点
+* 内存索引结点
+
+目录结构
+
+* 单极目录结构：实现按名存取、查找速度慢、不能重名、不利于实现共享
+* 二级目录结构：主文件目录MFD+用户文件目录UFD。提高检索速度、不同UFD中可重名、不同用户使用不同文件名访问系统中同一共享文件、共享不方便
+* 树型目录结构：三级/三级以上
+  * 多级目录优点：层次结构清晰便于管理保护，利于文件分类，解决重名问题，提高文件检索速度，能进行存取权限的控制。
+  * 缺点：查找一个文件按路径逐层检查，文件都放在外存，多次访存影响速度
+
+目录查询技术
+
+* 线性检索
+* Hash
+
 ## 6.6 文件共享
+
+同时存取：允许同时读，不允许同时改。修改时文件作临界资源，或者锁定指定的一条记录允许其他记录被改
+
+存取权限：执行、读、追加、更新、更改权限、删除
+
+文件共享的实现
+
+* 基于索引结点的共享方式
+* 利用符号链实现文件共享：优点方便链接任一文件，缺点访问共享文件时开销大且每一共享文件都要增加一文件名
+* 利用URL实现
 
 ## 6.7 文件保护
 
+不同对象允许实施的操作各不相同。例如，文件可施加读、写、执行等操作，信号量只能施加wait()和signal()操作。
 
+因此，系统为所有对象设置一个允许进程实施操作的操作集，任何对对象的操作必须符合操作集中的规定，防止未授权进程访问对象。
 
- 
-
-
-
-
+PPT最后也有几道习题记得看
