--- a/课内/计网.md
+++ b/课内/计网.md
@@ -576,6 +576,26 @@ $$
 
 ![image-20230622120629489](https://github.com/LyrisLaurier/notes/assets/94295495/55a89a14-93eb-4e50-8ba4-b59fe1347e46)
 
+节点的距离向量表
+
+* 用 $D_x(y) = min_v {c(x,v)+ D_v(y)}$ 更新距离向量，距离向量不再变化就终止
+
+  ```mermaid
+  graph LR
+  	x --2--- y --1--- z --7--- x
+  ```
+
+  ![image-20230622151405844](https://github.com/LyrisLaurier/notes/assets/94295495/4e9835aa-c4df-4a2c-9df1-08e3f9e7517e)
+
+
+链路费用改变与链路故障
+
+毒性逆转
+
+> 这没太懂，看完概念回来再看计算
+
+PPT-43后还有计算题可以
+
 
 
 
