--- a/课内/计网.md
+++ b/课内/计网.md
@@ -526,6 +526,23 @@ TCP平均吞吐量
 >
 > 路由算法Djstla、距离向量算法
 
+总结
+
+* 网络层提供的服务和功能：主机通信；虚电路和数据报；转发 ；选路 
+* 路由器工作原理 
+* 网际协议IP 
+  * IP报文、IP分片和重组
+  * IP编址和IP子网 
+  * P地址分类和无分类编址CIDR 
+  * NAT网络地址转换
+  * IPv6协议及特点
+  * IPv4和IPv6互通
+* 选路算法：链路状态选路算法；距离向量算法；层次选路
+* 因特网中的选路协议
+  * 内部网关协议：RIP、OSPF、IGRP
+  * 外部网关协议：BGP
+* SDN：概念，用途，架构；OpenFlow
+
 ## 4.5 路由和选路
 
 > 啊？怎么直接4.5了
@@ -595,6 +612,37 @@ $$
 > 这没太懂，看完概念回来再看计算
 
 PPT-43后还有计算题可以
+
+## 4.6 层次选路
+
+域内路由协议/内部网关协议IGP
+
+* 路由信息协议RIP
+* 开放式最短路径优先OSPE
+* 内部网关路由协议IGRP
+
+RIP
+
+* RIP通告：每隔30秒,通过响应报文在邻居间交换距离向量。每个通告包含了多达25个AS内的目的子网的列表
+* 路由器上有转发表：目的子网-下一跳路由-到目的地的跳数
+
+OSPF
+
+BGP
+
+> 这都是些啥啊。。。不想看
+
+## 4.7 SDN
+
+软件定义网络：一种新型网络创新架构，可通过 软件编程的形式定义和控制网络，具有控制平面和转发平面分离及 开放性可编程的特点。核心理念是希望应用软件可以参与对网络的控制管理，满足上层业务需求，通过自动化业务部署，简化网络运维
+
+发展驱动力，优势
+
+特征：基于流的转发；数据平面与控制平面分离；网络控制功能，位于数据平面交换机外部；可编程的网络
+
+SDN控制器组件：针对网络控制应用的接口层，负责维护网络状态一致视图的状态管理层，通信层
+
+OpenFlow：由OpenFlow网络设备、控制器、OpenFlow通道组成
 
 
 
