--- a/课内/计网.md
+++ b/课内/计网.md
@@ -543,6 +543,98 @@ TCP平均吞吐量
   * 外部网关协议：BGP
 * SDN：概念，用途，架构；OpenFlow
 
+## 4.1 网络层概述
+
+传输层和网络层提供服务的区别
+
+* 传输层为主机上的两个进程之间提供通信服务； 
+* 传输层只在网络的主机中出现；
+* 网络层提供的主机到主机的通信服务；
+* 网络层在网络的主机和路由器中出现。
+
+路由器核心功能
+
+* 网络层功能：转发-将分组从路由器输入转移到正确输出端口；路由-确认路径
+
+* 类比：路由-类似从发送方到接收方计划路线的过程；转发
+
+转发用转发表、分组交换机-链路层交换机和路由器
+
+数据平面：本地的，每个路由器自身的功能；决定抵达路由器输入端口的数据包如何转发到输出端口
+
+控制平面：确定数据报从发送主机到接收主机的 端到端路径上通过的路由器是哪些。两个方案：传统路由算法、软件定义网络
+
+## 4.2 虚电路和数据报网络
+
+数据报提供无连接，虚电路提供连接服务
+
+> 一点看不动。。。
+
+## 4.3  路由器工作原理
+
+两个核心功能：运行路由算法/协议；将分组从路由器的输入链路传送到正确的输出链路
+
+基于目的地
+
+* 线路端接模块：物理链路端→路由器的物理层
+* 数据链路处理模块：实现该层功能
+* 查找与转发模块：实现查找与转发功能，以便分组通过路由器交换结构转发到适当的输出端口
+
+转发表
+
+最长前缀匹配规则：对于给定的目的地址，使用最长地址前缀匹配来完成输出端口的查找
+
+交换结构：经内存、总线、互联网交换
+
+分组调度
+
+调度策略-加权公平队列
+
+## 4.4 转发与编址
+
+五类地址
+
+* A类地址的第一位为“0”
+* B类地址的前两位为“10”
+* C类地址的前三位为“110”
+* D类地址的前四位为“1110”，（组播）
+* E类地址的前五位为“11110”。（实验）
+
+特殊IP地址
+
+* 0.0.0.0：这个地址严格上来说都不是真正意义上的IP地址。主要是用来标识不清楚的网络和主机的。系统遇到无法识别的网络或主机的时候会统一的归纳到这个地址
+* 255.255.255.255：这个地址是受限的广播地址。主要指一个网段内的所有主机
+
+子网概念：为了确定子网，分开 主机和路由器的每个接口， 从而产生了几个分离的网络 岛，这些独立网络中的每一 个叫做一个子网
+
+子网划分原因： 子网划分可以降低整体网络流量并改善网络性能。 能让管理员实施安全策略
+
+CIDR： a.b.c.d/x，x是网络号位数
+
+子网掩码
+
+动态主机配置协议DHCP（应用层的）
+
+NAT网络地址转换
+
+* 外出的分组: 替换每个外出的分组的 (源IP 地址, 端口号) 为 (NAT IP 地址, 新端口号)  远程客户/服务器用(NAT IP地址, 新端口号)作为目的地来响。
+* (在NAT转换表中)记录每个(源IP 地址, 端口号)到 (NAT IP地址 , 新端口号) 转换配对
+* 进来的分组: 对每个进来的分组，用保存在NAT表中的对应的(源 IP 地址, 端口号) 替换分组中的目的域 (NAT IP 地址, 新端口 号）
+
+ICMP：因特网控制报文协议2
+
+IPV4与IPV6
+
+* 分片/重新组装
+  * IPv6不允许在中间路由器上进行分片与重新组装，只能在源与目的地执 行，加快了IP转发速度。
+* 首部校验和
+  * 完全去除以减小每跳的处理时间
+* 选项
+  * 允许，但在首部之外，由“下一个首部”字段指示，标识需要交付给哪 个协议（如TCP或UDP）。删除选项字段使得IP首部成为定长40字节。
+* ICMPv6: 新版本的 ICMP 
+  * 附加的报文类型，如 “分组太大” 
+  * 多播组管理功能
+
 ## 4.5 路由和选路
 
 > 啊？怎么直接4.5了
