--- a/课内/计网.md
+++ b/课内/计网.md
@@ -752,6 +752,20 @@ OpenFlow：由OpenFlow网络设备、控制器、OpenFlow通道组成
 >
 > VLAN划分
 
+总结
+
+* 链路层功能、提供的服务
+* 差错检测方法
+* 多路访问链路和协议
+* 局域网技术
+* 以太网技术(链路层和物理层的实现方式)
+  * 帧格式
+  * 以太网提供无连接、不可靠的服务
+  * 以太网采用的CSMA/CD原理 
+  * 物理层曼彻斯特编码*
+* 集线器和交换机
+* VLAN
+
 ## 5.1 概述
 
 链路层提供的服务：①封装成帧，链路接入；②在相邻节点之间可靠传输数据帧；③流量控制；④差错检查；⑤错误纠正；⑥半双工和全双工
@@ -760,8 +774,116 @@ OpenFlow：由OpenFlow网络设备、控制器、OpenFlow通道组成
 
 ## 5.2 差错检测和纠错
 
+比特级差错检测和纠错：对一个节点发送到一个相邻节点的帧，检测是否出现比特差错并纠正。差错检测并非100%可靠
+
+三种技术：奇偶校验-最基本、Internet校验和-常用于传输层、循环冗余检测-常用于链路层
+
+奇偶校验：d位数据后多1位，使1的个数是奇数（奇校验）或偶数（偶校验）
+
+* 检测d+1和数据中1的个数，偶校验就是偶数个1，奇校验就是奇数个1.若不对则至少1bits错误
+* 二维奇偶校验：传送信息划成二维，每行每列各有校验值→可以检测并纠正单个比特差错（数据或校验位中）；能够检测(但不能纠正)分组中任意两个比特的差错。
+
+Internet校验和
+
+* 发送方：将数据的每两个字节当作一个16位的整数，可分成若干整数；将所有16 位的整数求和；对得到的和逐位取反，作为检查和放在报文段首部一起发送
+* 接收方：包括校验和的部分按发送方同样方式计算求和，全1就没问题，有0就有错
+* 特点：
+  * 分组开销小：检查和位数比较少；
+  * 差错检测能力弱
+  * 适用于运输层（差错检测用软件实现，检查和方法简单、快速）。
+  * 链路层的差错检测由适配器中专用的硬件实现，采用更强的CRC方法
+
+循环冗余检测CRC
+
+* 发送方：计算出一个r位附加比特R，添加到D的后面产生DR（d+r 比特）。DR能被生成多项式G模2运算整除，一起发送
+
+* 接收方：用生成多项式G去除接收到的DR，余数全0则没问题，去掉r位就行。若非0，则出错
+
+* R的计算：将数据D后面添加r个0，除以给定的生成多项式G，所得余数即为R（r位）。 $D×2^r = nG\ XOR\ R$ →$R=G÷(D×2^r)$ 
+
+  比如D=101110，d=6，生成多项式G=1001（r+1位），r=3→101110÷1001=101011余011→实际传输101110 011
+
+  > 这里运算全是G(2)，不要进借位！！！
+
+* 特点：能检测小于 r+1 位的突发差错、任何奇数个差错。
+
+## 5.3 多路访问链路和协议
+
+两种网络链路
+
+* 点对点链路：链路两端各一个节点。一个发送和一个接收。如点对点协议PPP
+
+* 广播链路：多个节点连接到一个共享的广播信道
+
+多路访问协议
+
+* 目的：协调多个节点在共享广播信道上的传输。避免多个节点同时使用信道，发生冲突（碰撞），产生互相干扰。
+* 三类：信道划分协议、随机访问协议、轮流协议
+
+信道划分协议
+
+* 时分多路访问TDMA：将时间划分为时间帧，每个时间帧再划分为N个时隙（长度保证发送一个分组），分别分配给N个节点。每个节点只在固定分配的时隙中传输
+  * 特点：避免冲突、公平；节点速率有限；效率不高
+* 信道划分协议FDMA：将总信道带宽 R b/s划分为 N 个较小信道（频段，带宽为R/N），分别分配给 N 个节点
+  * 特点：避免冲突、公平；节点带宽有限、效率不高
+* 码分多路访问CDMA：每个节点分配唯一编码，用这个编码对发送数据进行编码
+
+随机访问协议：发送节点以信道全部速率（R b/s）发送。发生冲突时，冲突的每个节点分别等待一个随机时间再重发，直到帧(分 组)发送成功。节点间没有协调者
+
+* ALOHA：星型拓扑结构
+* 载波监听多路访问CSMA协议
+  * 特点：①发前监听，可减少冲突。②由于传播时延的存在，仍有可能出现冲突，并造成信道浪费
+* 带冲突检测的载波监听多路访问CSMA/CD 
+* 带冲突避免的载波监听多路访问CSMA/CA
+
+轮流协议
+
+* 特性：①只有一个节点活动时，吞吐量R b/ s；②有M个节点活动时，吞吐量R/M b/ s。 ③ALOHA和CSMA协议有第一个特性，但没有第二个特性
+
+* 轮询协议、令牌传递协议
+
+> 这些协议都有细讲的PPT，但是期末好像不是重点，不看了先
+
+## 5.4 交换局域网
+
+网络拓扑结构：星型、树型、网状
+
+地址解析协议ARP：局域网上每个节点有ARP表，进行IP/MAC地址映射
+
+* 发送到子网外：A知道B的IP、第一条路由R的IP（利用DHCP协议）、R的MAC地址（利用ARP协议）。A构建数据报，含源（A）/目的（B）IP→构建链路层数据帧，目的MAC是第一条路由左边端口，发给R→R接收抽出数据报给IP层→R转发，封装成数据链路层帧，目的MAC是B的
+
+以太网
+
+* 帧结构
+
+  ![image-20230622222054270](https://github.com/LyrisLaurier/notes/assets/94295495/47e7866c-55d3-4f78-b1df-e9cf75a8a78d)
 
 
+  发送方将IP数据报封装成以太帧，传递到物理层；接收方从物理层接收取出IP数据报，传递给网络层
+
+  * 前同步码：用于时钟同步。接收后删除不向上层传，也不在CRC校验范围内
+
+* 提供不可靠的无连接服务：不握手，收到正确帧不发确认帧，收到错误帧之间丢弃也不发否定帧
+
+* 以太网的MAC协议：见5.3.2，使用无时隙的CSMA/CD协议（二进制指数回退）
+
+链路层交换机：链路层设备存储转发数据帧；检查达到的数据帧的MAC地址，有选择的转发数据帧到一个或多个输出链路，当数据帧被转发到一个共享网段时，使用 CSMA/CD 来访问共享链路
+
+* 交换机有转发表
+* 自学习（不看）
+* 交换特点：识别目的MAC地址，根据交换表进行端口选择。识别源MAC地址更新交换表
+* 交换方式：
+  * 存储转发-缓存整个帧后再转发：具有差错检测功能，转发时延较大，适用于出错率高的链路
+  * 快速分组/直通交换-识别出目的地址直接转发：不具有差错检测功能，转发时延较小，适用于时延要求高，出错率低的链路
+
+三层交换机：二层交换机+基于硬件的路由器
+
+交换机与路由
+
+* 都是存储转发设备：路由器是网络层设备，检查网络层头部 ；交换机是链路层设备，检查链路层头部
+* 都有转发表：路由器使用路由算法计算转发表，基于IP地址转发；交换机通过泛洪、自学习来学习转发表，基于MAC地址转发
+
+VLAN-基于端口的VLAN: 利用交换机内置 的管理软件，将端口分组，使得 一个单独的交换机
 
 
 
