--- a/数据安全/概念.md
+++ b/数据安全/概念.md
@@ -11,7 +11,8 @@
 * PaaS（平台即服务） : 为软件开发者提供随需应变的平台 - 硬件、完整的软件栈、基础架构，甚至是开发工具，用于运行、开发和管理应用            
 * SaaS（软件即服务）：为用户提供的是一个完整的软件服务，可以通过 Web 浏览器、专用桌面客户端或者与桌面或移动操作系统集成的 API 来访问和使用该软件
 
-![[v2-87b9fe5bedf6658611c0e3c21a1135de_1440w.webp | 500]]
+![image](https://github.com/LyrisLaurier/notes/assets/94295495/e104e67d-ab22-46fe-9328-1163d6a02370)
+
 
 云计算类型
 * 公有云：用户可以通过互联网按需自助服务
@@ -76,13 +77,14 @@ SaaS：保障 SaaS 平台自身安全和 SaaS 应用安全
 * 合约层：智能合约，通过算法、程序编码等技术手段将传统合约内容编码成为一段可以在区块链上自动执行的程序
 * 应用层组成
 
-![[55e736d12f2eb93860793266de628535e5dd6f0a.webp | 450]]
+![image](https://github.com/LyrisLaurier/notes/assets/94295495/21d25f78-8cab-434d-9dee-3bb4d2025ef9)
+
 
 区块结构
 * 区块头：记录当前区块的元信息
 * 区块体：实际数据
 
-![[Pasted image 20230908153559.jpg| 550]]
+![Pasted image 20230908153559](https://github.com/LyrisLaurier/notes/assets/94295495/40c2b682-6c11-4d24-bb2b-9e61bd5f54f9)
 
 工作
 * 每个交易发生时都会被记录为一个数据区块，数据区块可以记录信息，如人、事件、时间、地点、数目、条件等
